--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<script src="https://threejs.org/build/three.min.js"></script>
-		<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+		<script type="importmap">
+			{
+			  "imports": {
+				"three": "https://cdn.jsdelivr.net/npm/three@0.164.1/build/three.module.js",
+				"three/addons/": "https://cdn.jsdelivr.net/npm/three@0.164.1/examples/jsm/"
+			  }
+			}
+		</script>
 
 		<script type="module" src="rubix.js"></script>
 		<script type="module" src="animation.js"></script>
